--- a/src/App.css
+++ b/src/App.css
@@ -12,3 +12,12 @@ display: flex;
 align-items: center;
 justify-content: space-evenly;
 }
+.footer{
+  width: 100%;
+  height: 10vh;
+  background: black;
+  color: aliceblue;
+  display: flex;
+  align-items: center;
+  justify-content: center; 
+}
