--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,7 @@
 .navbar {
 width: 100%;
 height: 10vh;
-background: black;
+background:blue;
 color: aliceblue;
 display: flex;
 align-items: center;
@@ -15,9 +15,16 @@ justify-content: space-evenly;
 .footer{
   width: 100%;
   height: 10vh;
-  background: black;
+  background: blue;
   color: aliceblue;
   display: flex;
   align-items: center;
   justify-content: center; 
+}
+.books{
+  min-height: 80vh;
+  width: 100%;
+  display: grid;
+  grid-template-columns: repeat(3,1fr);
+  justify-items: center;
 }
