listbooks and style the body

--- a/src/App.css
+++ b/src/App.css
@@ -27,4 +27,28 @@ justify-content: space-evenly;
   display: grid;
   grid-template-columns: repeat(3,1fr);
   justify-items: center;
+
+}
+.book-list{
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin: 20px 0 ;
+}
+img{
+  width: 300px;
+  height: 300px;
+  transition: all 0.3s ease;
+}
+img:hover{
+  transform:scale(1.2 );
+}
+button{
+  padding: 10px;
+  background: black;
+  color: orangered;
+  width:100%;
+  border-radius: 15px;
 }
