--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,10 @@
   padding:0 ;
   margin: 0;
 }
+a{
+  color: aliceblue;
+  text-decoration: none;
+}
 .navbar {
 width: 100%;
 height: 10vh;
@@ -36,6 +40,13 @@ justify-content: space-evenly;
   align-items: center;
   justify-content: center;
   margin: 20px 0 ;
+}
+.reading{
+  min-height: 80vh;
+  width: 100%;
+  display: grid;
+  grid-template-columns: repeat(3,1fr);
+  justify-items: center;
 }
 img{
   width: 300px;
