--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,7 @@ a{
 }
 .header{
   display: flex;
-  align-items: center;
+  border-style: groove;
   justify-content: center; 
   font-weight:bolder;
   font-size: x-large;
@@ -19,7 +19,7 @@ a{
 width: 100%;
 height: 5vh;
 background:blue;
-color: aliceblue;
+color:white;
 display: flex;
 align-items: center;
 justify-content: space-evenly;
@@ -57,6 +57,7 @@ padding: 20px;
   display: grid;
   grid-template-columns: repeat(3,1fr);
   justify-items: center;
+  text-align: center;
 }
 
 .home{
@@ -66,7 +67,7 @@ padding: 20px;
   background:  url("https://media.istockphoto.com/photos/study-and-education-conceptautumn-booksback-to-school-halloween-books-picture-id1412583468?b=1&k=20&m=1412583468&s=170667a&w=0&h=9EVrpgNM0RQfbDv2V3Hp28L8xaaB_MPbhL05Gh0ph9M=" ) center/cover no-repeat;
   
 }
-.home-text{
+.text{
   text-align: center;
   text-decoration: wavy;
   text-decoration-color: red;
@@ -79,6 +80,7 @@ padding: 20px;
 .about{
   min-height: 80vh;
   width: 100%;
+  text-align: center;
   
 }
 img{
@@ -87,7 +89,7 @@ img{
   transition: all 0.3s ease;
 }
 img:hover{
-  transform:scale(1.2 );
+  transform:scale(1.1 );
 }
 button{
   padding: 10px;
@@ -99,4 +101,8 @@ button{
 .active{
   color:orangered;
   font-weight: bold;
+}
+.logo{
+  max-height: 60px;
+  max-width: 70px;
 }
